# 21-school-MainStudy

./: README.md
FdF/: CMakeLists.txt  FdF.h  Makefile  a.out  main.c  readme
FdF/libft/: Makefile  ft_isascii.c  ft_lstdel.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  get_next_line.h
Fillit/: CMakeLists.txt  Fillit.h  main.c
Fillit/libft/: ft_bzero.c  ft_lstadd.c  ft_lstdelone.c  ft_lstnew.c  ft_memcpy.c  ft_memdel.c  ft_putstr_fd.c  ft_strcat.c  ft_strcmp.c  ft_striteri.c  ft_strlen.c  ft_strnequ.c  ft_strsplit.c  ft_toupper.c
Fillit/tests/: test_2.txt  test_5.txt  test_6.txt  test_7.txt
Get_next_line/: author  get_next_line.c  get_next_line.h  get_next_line_v2.c
Get_next_line/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_lstadd.c  (+27 more)
Libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  (+11 more)
ft_printf/: CMakeLists.txt  ft_printf.c
(+27 files in other folders)
